# saferc

./: .stylish-haskell.yaml  README.md  saferc.cabal  shell.nix
main/: Main.hs
src/: SaferC.hs
src/Data/: Partition.hs
src/SaferC/: Check.hs  Error.hs  Parser.hs  Types.hs
test/: cat.sfc
