cabal-version:           2.0
name:                    saferc
version:                 0.1.0.0
author:                  Lars Jellema
maintainer:              lars.jellema@gmail.com
build-type:              Simple

library
  hs-source-dirs:        src
  default-language:      Haskell2010
  ghc-options:           -Wall
  build-depends:
      base
    , binary
    , bytestring
    , comonad
    , containers
    , directory
    , filepath
    , free
    , megaparsec
    , mtl
    , parser-combinators
    , process
    , recursion-schemes
    , text
    , transformers
    , transformers-compat
    , utf8-string

  exposed-modules:
    SaferC.Parser
    SaferC.Types

  default-extensions:
    BlockArguments
    DeriveGeneric
    DeriveTraversable
    ImportQualifiedPost
    LambdaCase
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    TupleSections

executable saferc
  main-is:               Main.hs
  hs-source-dirs:        main
  default-language:      Haskell2010
  build-depends:
      saferc
    , base
    , megaparsec
    , text

  default-extensions:
    ImportQualifiedPost
